Done with fixing issues with di install, remove: 1. Add new datasouce creds configs in app.config 2. Fix servers_di_post_install.sh script with quotes 3. Fix localhost in default properties of packages in path /dbagiga/di-subscription-manager/latest-di-subscription-manager/config/ this will fix dns issue in post install 4. Fix flink config by adding java ops to fix pipeline start issue 5. Fix: Remove di should clean up zk, kafka links 6. Fix: Remove DI noticed minor issue with 32: [: /usr/local/bin/start_kafka.sh: binary operator expected